--- a/frontend/public/styles/styles.css
+++ b/frontend/public/styles/styles.css
@@ -37,17 +37,17 @@ header
     display: flex;
     flex-direction: column;
     gap: 3rem;
-<<<<<<< HEAD
+
     padding: 0px 4rem;
     height: 100vh;
     position: absolute;
     right: 0;
     width: 95%;
-=======
+
     padding: 0px;
     height: 100vh;
     width: 100%;
->>>>>>> draft/draft
+
     background-color: #326063;
 }
 
@@ -129,15 +129,12 @@ header
 
 .pending-tasks
 {
-<<<<<<< HEAD
     background-color: #0000006a;
     display: flex;
     text-align: center;
     flex-direction: column;
     gap: 20px;
-=======
     background-color: #234345;
->>>>>>> draft/draft
     padding: 20px;
     color: white;
     width: 30%;
@@ -164,6 +161,7 @@ header
 {
     display: flex;
     padding: 20px;
+    z-index: 20;
     gap: 20px;
     align-items: center;
     flex-direction: column;
@@ -207,10 +205,9 @@ hr
     font-size: 40px;
     cursor: pointer;
     color: white;
-<<<<<<< HEAD
 }
-=======
-}
+
+
 
 /*----------------------------------Media Queries-------------------------- */
 
@@ -323,4 +320,3 @@ hr
         width: 65%;
     }
 }
->>>>>>> draft/draft
