--- a/frontend/public/styles/todo.css
+++ b/frontend/public/styles/todo.css
@@ -20,7 +20,7 @@ body
    
 }
 
-/*----------------------------------------------------------- Side Nav-------------------------- */
+/*------------------------------------- Side Nav-------------------------- */
 .side-nav
 {
     position: fixed;
@@ -33,8 +33,8 @@ body
     justify-content: space-between;
     width: 5%;
     height: 100vh;
-    background-color: #2c3e50;
-    /* background-color: rgb(3, 3, 71); */
+    background-color: #234345;
+
 }
 
 .top-nav-items > .divider
@@ -69,10 +69,10 @@ hr
 {
     font-size: 40px;
     cursor: pointer;
-    color: orange;
+    color: white;
 }
 
-/*----------------------------------------------------------- section -------------------------- */
+/*---------------------------------------- section -------------------------- */
 
 /* Section will act as the content body */
 section
@@ -88,7 +88,7 @@ section
     width: 100%;
 }
 
-/*----------------------------------------------------------- Tasks Body---------------------- */
+/*------------------------------------------- Tasks Body---------------------- */
 
 .container, .table-container
 {
@@ -107,7 +107,7 @@ section
     color: red;
 }
 
-/*----------------------------------------------------------- form ---------------------- */
+/*-------------------------------------------- form ---------------------- */
 .close-btn
 {
     position: absolute;
@@ -177,7 +177,7 @@ input:focus
 {
     outline: none;
 }
-/*----------------------------------------------------------- Search ---------------------- */
+/*---------------------------------------------- Search ---------------------- */
 
 .task-header
 {
@@ -237,7 +237,7 @@ input:focus
     margin: 20px;
 }
 
-/*----------------------------------------------------------- Table ---------------------- */
+/*--------------------------------------------- Table ---------------------- */
 
 /* Table Header */
 .todo-results
