--- a/frontend/public/styles/profile.css
+++ b/frontend/public/styles/profile.css
@@ -100,7 +100,7 @@ section
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    /* align-items: center; */
+    align-items: center;
     gap: 20px;
     background-color: #326063;
     height: 100vh;
